@@ -65,7 +65,7 @@ DRLM are compatible with previous versions, unless otherwise noted.
 The references pointing to fix #nr or issue #nr refer to our issues tracker
 
 
-DRLM Version 2.4.11 (January 2024) - Release Notes
+DRLM Version 2.4.11 (February 2024) - Release Notes
 ---------------------------------------------------
   * NEW! RAWDISK output backup type supported
 
@@ -82,6 +82,8 @@ DRLM Version 2.4.11 (January 2024) - Release Notes
   * Bugfix in DRLM pre and post runbackup script
 
   * Added ability to adjust client configs upon migrations on rescue startup
+
+  * Added ReaR tunning to avoid mac mapping on automatic restore
 
 
 DRLM Version 2.4.10 (February 2023) - Release Notes
